[gd_scene load_steps=3 format=3 uid="uid://dshvxnpxiqv28"]

[ext_resource type="Script" path="res://UI/note_count_pentagram_ui.gd" id="1_rg5gf"]
[ext_resource type="Texture2D" uid="uid://d0ldjubvhi00f" path="res://Assets/Notes/notes.png" id="2_4j1si"]

[node name="note_count_pentagram_ui" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rg5gf")

[node name="Control" type="Control" parent="."]
visible = false
layout_mode = 2
anchors_preset = 0
offset_left = 64.0
offset_top = 40.0
offset_right = 64.0
offset_bottom = 40.0

[node name="TextureRect" type="TextureRect" parent="Control"]
texture_filter = 1
layout_mode = 2
offset_right = 128.0
offset_bottom = 128.0
scale = Vector2(0.7, 0.7)
texture = ExtResource("2_4j1si")
stretch_mode = 4

[node name="Control2" type="Control" parent="."]
visible = false
layout_mode = 2
anchors_preset = 0
offset_left = 192.0
offset_top = 40.0
offset_right = 192.0
offset_bottom = 40.0

[node name="TextureRect" type="TextureRect" parent="Control2"]
texture_filter = 1
layout_mode = 2
offset_right = 128.0
offset_bottom = 128.0
scale = Vector2(0.7, 0.7)
texture = ExtResource("2_4j1si")
stretch_mode = 4

[node name="Control3" type="Control" parent="."]
visible = false
layout_mode = 2
anchors_preset = 0
offset_left = 320.0
offset_top = 40.0
offset_right = 320.0
offset_bottom = 40.0

[node name="TextureRect" type="TextureRect" parent="Control3"]
texture_filter = 1
layout_mode = 2
offset_right = 128.0
offset_bottom = 128.0
scale = Vector2(0.7, 0.7)
texture = ExtResource("2_4j1si")
stretch_mode = 4

[node name="Control4" type="Control" parent="."]
visible = false
layout_mode = 2
anchors_preset = 0
offset_left = 448.0
offset_top = 40.0
offset_right = 448.0
offset_bottom = 40.0

[node name="TextureRect" type="TextureRect" parent="Control4"]
texture_filter = 1
layout_mode = 2
offset_right = 128.0
offset_bottom = 128.0
scale = Vector2(0.7, 0.7)
texture = ExtResource("2_4j1si")
stretch_mode = 4

[node name="Control5" type="Control" parent="."]
visible = false
layout_mode = 2
anchors_preset = 0
offset_left = 576.0
offset_top = 40.0
offset_right = 576.0
offset_bottom = 40.0

[node name="TextureRect" type="TextureRect" parent="Control5"]
texture_filter = 1
layout_mode = 2
offset_right = 128.0
offset_bottom = 128.0
scale = Vector2(0.7, 0.7)
texture = ExtResource("2_4j1si")
stretch_mode = 4
